AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(fuseiso, 20070708)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_CHECK_HEADERS(fuse.h, AC_CHECK_LIB(fuse, fuse_main, [],
    [ AC_MSG_ERROR([libfuse is required]) ]), 
    [ AC_MSG_ERROR([libfuse is required]) ],
[
#ifndef _FILE_OFFSET_BITS
#define _FILE_OFFSET_BITS 64
#endif
])

AC_OUTPUT(Makefile src/Makefile zAppRun/Makefile)
